--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@
   flex-direction: column;
   justify-content: space-between;
   text-align: left;
-  min-width: 250px;
+  min-width: 200px;
+  flex: 1 1 0;
 }
 
 .dnd-item {
